--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text">
-                    <h2 class="title">Hello! My name is Surabhi</h2>
+                    <h2 class="title">Hello! My name is Surabhi Koshatwar</h2>
                     <p class="description">I am a student and I aspire to be a web developer. </p>
                 </div>
             </div>
