changed card css

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="portfolio.css">
 
 
@@ -51,9 +52,9 @@
 
 
     <section id="resume">
-        <div class="container reveal mt-4 pt-4">
+        <div class="container mt-4 pt-4">
             <h1 class="text-center revealUp">A little about Me</h1>
-            <div class="row mt-4">
+            <div class="row reveal mt-4">
                 <div class="col-lg-4">
                     <img src="https://3.bp.blogspot.com/-awcchP27iX4/VT_UiNcSzgI/AAAAAAAAF9g/kLTOjEnvBMg/w1200-h630-p-k-no-nu/About%2BMe%2BModel%2BMayhem.png" class="imageAboutPage" alt="">
                 </div>
@@ -88,7 +89,7 @@
     <section id="projects">
         <div class="container mt-3">
             <h1 class="text-center">Projects</h1>
-            <div class="row">
+            <div class="row reveal">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
                         <img class="card-img-top" src="https://media.istockphoto.com/id/1262293120/vector/coffee-cup-symbol-icon.jpg?s=612x612&w=0&k=20&c=C5VHghz8P7qraOslQk13-_ArDWHzjhm5ARZ8o7CrO6Y=">
@@ -96,7 +97,7 @@
                             <h4 class="card-title">Cafe website</h4>
                             <p class="card-text">Everbody dreams of having a cafe! Here is what mine would like. This project consists of a cafe menu and an option of customize sandwich. You can customize your sandwich and order from your table without having to socialize</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Check it out</a>
                             </div>
                         </div>
                     </div>
@@ -108,7 +109,7 @@
                             <h4 class="card-title">Password generator</h4>
                             <p class="card-text">Are you tired of thinking for new passwords? This website generates a strong password with required number of letters, special characters and numbers. </p>
                             <div class="text-center">
-                                <a href="S:\surabhi\projects\passwordGenerator\index.html" class="btn btn-success" target="_blank">Link</a>
+                                <a href="https://surabhi-koshatwar.github.io/password-generator/" class="btn btn-success" target="_blank">Check it out</a>
                             </div>
                         </div>
                     </div>
@@ -120,7 +121,7 @@
                             <h4 class="card-title">Cafe website</h4>
                             <p class="card-text">project descriptio</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Check it out</a>
                             </div>
                         </div>
                     </div>
@@ -133,24 +134,25 @@
     <section id="contact">
         <div class="container mt-3 contactContent">
             <h1 class="text-center">Contact Me</h1>
-            <div class="row mt-4">
+            <div class="row reveal mt-4">
                 <div class="col-lg-6">
                     <h3>Email</h3>
                     <p>surabhikoshatwar@gmail.com</p>
                     <h3>Linkedin</h3>
-                    <a href="www.linkedin.com/in/surabhi-koshatwar-30674b20a">Surabhi Koshatwar</a>
-
+                    <a href="https://www.linkedin.com/in/surabhi-koshatwar-30674b20a/">Surabhi Koshatwar</a>
                 </div>
+
                 <div class="col-lg-6">
                     <form>
                         <input type="text" class="form-control form-control-lg" placeholder="Name">
                         <input type="email" class="form-control mt-3" placeholder="Email">
                         <input type="text" class="form-control mt-3" placeholder="Subject">
                         <div class="mb-3 mt-3">
-                            <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Message"></textarea>
+                            <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
                         </div>
                     </form>
                     <button type="button" class="btn btn-success mt-3">Contact Me</button>
+
                 </div>
             </div>
         </div>
