--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
     <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
         <div class="container">
             <a class="navbar-brand" href="#">Surabhi</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="navbar-collapse collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
                         <a class="nav-link" aria-current="page" href="#home">Home</a>
@@ -91,7 +91,7 @@
             <h1 class="text-center">Projects</h1>
             <div class="row reveal">
                 <div class="col-lg-4 mt-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img class="card-img-top" src="https://media.istockphoto.com/id/1262293120/vector/coffee-cup-symbol-icon.jpg?s=612x612&w=0&k=20&c=C5VHghz8P7qraOslQk13-_ArDWHzjhm5ARZ8o7CrO6Y=">
                         <div class="card-body">
                             <h4 class="card-title">Cafe website</h4>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mt-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPZx9L4Eg1zV9PkFcF3REHVpabdE8msKheRA&usqp=CAU">
                         <div class="card-body">
                             <h4 class="card-title">Password generator</h4>
@@ -115,10 +115,10 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mt-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img class="card-img-top" src="https://media.istockphoto.com/id/1262293120/vector/coffee-cup-symbol-icon.jpg?s=612x612&w=0&k=20&c=C5VHghz8P7qraOslQk13-_ArDWHzjhm5ARZ8o7CrO6Y=">
                         <div class="card-body">
-                            <h4 class="card-title">Cafe website</h4>
+                            <h4 class="card-title">To do list</h4>
                             <p class="card-text">project descriptio</p>
                             <div class="text-center">
                                 <a href="#" class="btn btn-success">Check it out</a>
@@ -140,13 +140,15 @@
                     <p>surabhikoshatwar@gmail.com</p>
                     <h3>Linkedin</h3>
                     <a href="https://www.linkedin.com/in/surabhi-koshatwar-30674b20a/">Surabhi Koshatwar</a>
+                    <h3>Github</h3>
+                    <a href="https://github.com/dashboard">Surabhi-Koshatwar</a>
                 </div>
 
                 <div class="col-lg-6">
                     <form>
-                        <input type="text" class="form-control form-control-lg" placeholder="Name">
-                        <input type="email" class="form-control mt-3" placeholder="Email">
-                        <input type="text" class="form-control mt-3" placeholder="Subject">
+                        <input type="text" class="form-control form-control-lg" placeholder="Name" required>
+                        <input type="email" class="form-control mt-3" placeholder="Email" required>
+                        <input type="text" class="form-control mt-3" placeholder="Subject" required>
                         <div class="mb-3 mt-3">
                             <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
                         </div>
@@ -159,15 +161,18 @@
     </section>
 
     <footer id="footer">
-        <div class="container-fluid">
-            <div class="social-icons mt-4">
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            </div>
+        <div class="socials">
+            <a href="#" target="_blank"><img src="assets/icons8-instagram-128.png" alt="Instagram" loading="lazy" class="socicon" /></a>
+            <a href="#" target="_blank"><img src="assets/icons8-linkedin-96.png" alt="Linkedin" loading="lazy" class="socicon" /></a>
+            <a href="#" target="_blank"><img src="assets/icons8-github-100.png" alt="Github" class="socicon" /></a>
         </div>
     </footer>
+
+    <i class="scroll-up" id="scroll-up"><img
+        src="assets/icons8-upward-arrow.gif"
+        class="socicon up-arrow"
+        alt="scroll-up"
+    /></i>
     <script src="script.js" type="text/javascript"></script>
 </body>
 
